src/objects/Approved_Certificate__c.object
<CustomObject>
    <description>***DO NOT USE*** Certificates that are granted to applicants, such as Certificate of Preference (COP) and Ellis Act Housing Preference Certificate (EAHP)</description>
    <fields>
        <fullName>Acquired_Date__c</fullName>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Documentation_Required__c</fullName>
        <label>Additional Documentation Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Exercised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate Exercised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Holder_Name__c</fullName>
        <label>Certificate Holder Name</label>
        <referenceTo>Members__c</referenceTo>
        <relationshipLabel>Approved Certificates</relationshipLabel>
        <relationshipName>Approved_Certificates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <description>Internal MOHCD Certificate Number.</description>
        <inlineHelpText>Internal MOHCD Certificate Number.</inlineHelpText>
        <label>Certificate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <label>Certificate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Certificate_Issued__c</fullName>
        <label>Date Certificate Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Certificate_Sent__c</fullName>
        <label>Date Certificate Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Denial_Letter_Sent__c</fullName>
        <label>Date Denial Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Eligibility_Letter_Sent__c</fullName>
        <label>Date Eligibility Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ID_Received__c</fullName>
        <label>Date ID Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Incomplete_Application_Letter_Sent__c</fullName>
        <label>Date Incomplete Application Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Notice_of_Intent_Filed__c</fullName>
        <label>Date Notice of Intent Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_for_Patient_HC_Info_Rec_d__c</fullName>
        <description>Date Request for Patient Healthcare Information Received</description>
        <inlineHelpText>Date Request for Patient Healthcare Information Received</inlineHelpText>
        <label>Date Request for Patient HC Info Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_for_Patient_HC_Info_Sent__c</fullName>
        <description>Date Request for Patient Healthcare Information Sent</description>
        <inlineHelpText>Date Request for Patient Healthcare Information Sent</inlineHelpText>
        <label>Date Request for Patient HC Info Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elderly__c</fullName>
        <label>Elderly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>American Indian</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired_Date__c</fullName>
        <label>Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <label>Family Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handicap__c</fullName>
        <label>Handicap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_of_Intent_Filed_w_SF_Rent_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Intent Filed w/ SF Rent Board?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Denial__c</fullName>
        <label>Reason for Denial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Number__c</fullName>
        <label>Resident Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_Security_Last_Four__c</fullName>
        <description>Last four digits of Social Security #</description>
        <label>Social Security Last Four</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>4</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <label>Special Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Number__c</fullName>
        <label>Work Number</label>
        <type>Phone</type>
    </fields>
    <label>Approved Certificate</label>
    <nameField>
        <displayFormat>CERTID-{YYYY}-{0}</displayFormat>
        <label>Certificate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Certificates</pluralLabel>
    <recordTypes>
        <fullName>Certificate_of_Preference</fullName>
        <active>true</active>
        <description>Certificate of Preference that is granted to applicants.</description>
        <label>Certificate of Preference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ellis_Act_Housing_Preference</fullName>
        <active>true</active>
        <description>Ellis Act Housing Preference Certificate that is granted to applicants.</description>
        <label>Ellis Act Housing Preference</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>